<resources>
    <string name="xem_thong_so">Xem thong so</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="warn">warn</string>
    <string name="register">Register</string>
    <string name="full_name_profile">Loading...</string>
    <string name="about_us">About us</string>
    <string name="account">Account</string>
    <string name="chane_pass_title">Current</string>
    <string name="app_name">Warehouse Management</string>
    <string name="login_name">Login</string>
    <string name="settings_name">Settings</string>
    <string name="update_name">Check_for_update</string>
    <string name="help_name">Help</string>
    <string name="forgot_password_name">Forgot password</string>
    <string name="password_name">Password</string>
    <string name="username_name">Username</string>
    <string name="confirm_password_name">Confirm password</string>
    <string name="full_name">Fullname</string>
    <string name="register_name">Register</string>
    <string name="warehouse_logo_name">Warehouse logo</string>
    <string name="icon_name">Icon</string>
    <string name="homepage_name">Agricultural warehouse</string>
    <string name="environment_name">Environment</string>
    <string name="weather_name">Weather</string>
    <string name="history_name">History</string>
    <string name="products">Products</string>
    <string name="num1205_name">1205</string>
    <string name="chane_info">Update</string>
    <string name="chane_pass">Password</string>
    <string name="phone_num_profile">+84901443034</string>
    <string name="mail_profile">phuquy4848@gmail.com</string>
    <string name="birth_day">04/08/1999</string>
    <string name="address">Linh Chieu Ward, Thu Duc District</string>
    <string name="followers_name">Follow</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="change_picture">Change</string>
    <string name="remove_picture">Remove</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="verify_password">Retype new password</string>
    <string name="paddy">Paddy</string>
    <string name="coffee">Coffee</string>
    <string name="temp">Temp</string>
    <string name="humid">Humid</string>
    <string name="bright">Bright</string>
    <string name="agricultural_products">The most suitable condition of agricultural products</string>
    <string name="list">List</string>
    <string name="change">Change</string>
    <string name="change_information">Change Information</string>
    <string name="lux">lux</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="brightness">Brightness</string>
    <string name="apple">Apple</string>
    <string name="change_environment">Change Environment</string>
    <string name="setting_product">Setting Product</string>
    <string name="modify_product">Modify Product</string>
    <string name="camera">Camera</string>
    <string name="choose">Choose</string>
    <string name="tomato">Tomato</string>
    <string name="orrange">Orrange</string>
    <string name="banana">Banana</string>
    <string name="bean">Bean</string>
    <string name="grapes">Grapes</string>
    <string name="pepper">Pepper</string>
    <string name="vegetables">Vegetables</string>
    <string name="watermelon">Watermelon</string>
</resources>